--- a/src/main/resources/open-please.mixins.json
+++ b/src/main/resources/open-please.mixins.json
@@ -2,9 +2,7 @@
 	"required": true,
 	"package": "michael.openplease.mixin",
 	"compatibilityLevel": "JAVA_21",
-	"mixins": [
-		"AutoOpenDoorMixin"
-	],
+	"mixins": [],
 	"injectors": {
 		"defaultRequire": 1
 	}
