--- a/gradle.properties
+++ b/gradle.properties
@@ -4,14 +4,15 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.3
-yarn_mappings=1.21.3+build.2
+
+minecraft_version=1.21.4
+yarn_mappings=1.21.4+build.1
 loader_version=0.16.9
 
+# Fabric API
+fabric_version=0.111.0+1.21.4
+
 # Mod Properties
-mod_version=1.0.0
+mod_version=1.1.0
 maven_group=michael.openplease
 archives_base_name=open-please
-
-# Dependencies
-fabric_version=0.110.0+1.21.3
