--- a/gradle.properties
+++ b/gradle.properties
@@ -5,14 +5,15 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 
-minecraft_version=1.21.5
-yarn_mappings=1.21.5+build.1
-loader_version=0.16.10
+minecraft_version=1.21.7
+yarn_mappings=1.21.7+build.2
+loader_version=0.16.14
+loom_version=1.11-SNAPSHOT
 
 # Fabric API
-fabric_version=0.119.5+1.21.5
+fabric_version=0.128.2+1.21.7
 
 # Mod Properties
-mod_version=1.2.1
+mod_version=1.2.2
 maven_group=michael.openplease
 archives_base_name=open-please
