--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,8 @@ base {
 }
 
 repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
+	maven { url "https://maven.shedaniel.me/" }
+	maven { url "https://maven.terraformersmc.com/releases/" }
 }
 
 fabricApi {
@@ -32,6 +29,11 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	implementation "org.spongepowered:mixin:<version>"
+
+	modApi("me.shedaniel.cloth:cloth-config-fabric:19.0.147") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
 	
 }
 
