--- a/build.gradle
+++ b/build.gradle
@@ -29,11 +29,11 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	implementation "org.spongepowered:mixin:<version>"
 
 	modApi("me.shedaniel.cloth:cloth-config-fabric:19.0.147") {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
+	modApi "com.terraformersmc:modmenu:15.0.0-beta.3"
 	
 }
 
