--- a/build.gradle
+++ b/build.gradle
@@ -30,10 +30,10 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	modApi("me.shedaniel.cloth:cloth-config-fabric:19.0.147") {
+	modApi("me.shedaniel.cloth:cloth-config-fabric:11.1.136") {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
-	modApi "com.terraformersmc:modmenu:15.0.0-beta.3"
+	modApi "com.terraformersmc:modmenu:7.2.2"
 	
 }
 
@@ -46,7 +46,7 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-	it.options.release = 21
+	it.options.release = 17
 }
 
 java {
@@ -55,8 +55,8 @@ java {
 	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 
-	sourceCompatibility = JavaVersion.VERSION_21
-	targetCompatibility = JavaVersion.VERSION_21
+	sourceCompatibility = JavaVersion.VERSION_17
+	targetCompatibility = JavaVersion.VERSION_17
 }
 
 jar {
