--- a/gradle.properties
+++ b/gradle.properties
@@ -5,15 +5,15 @@ org.gradle.parallel=true
 # Fabric Properties
 # check these on https://fabricmc.net/develop
 
-minecraft_version=1.21.7
-yarn_mappings=1.21.7+build.3
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
 loader_version=0.16.14
 loom_version=1.11-SNAPSHOT
 
 # Fabric API
-fabric_version=0.128.2+1.21.7
+fabric_version=0.92.6+1.20.1
 
 # Mod Properties
-mod_version=2.0.1
+mod_version=2.0.1+1.20.1
 maven_group=michael.openplease
 archives_base_name=open-please
